# YukiZygisk

./: .ddk-version  .gitignore  LICENSE  Makefile  NOTICE  README.md  build.sh
.github/workflows/: build-module.yml  ddk-lkm.yml
kernel/: Kbuild  Kbuild.inc  Makefile  README.md  integrated.h  klog.h
kernel/core/: bootstrap.c  bootstrap.h  control.c  control.h  module.c  module_integrated.c
kernel/feature/: zygote_ctl.c  zygote_ctl.h  zygote_nl.c  zygote_nl.h  zygote_orch.c  zygote_orch.h  zygote_probe.c  zygote_probe.h
kernel/host/: adapter.c  host.h  lsm.c  lsm.h  mount.c  mount.h  patch_text.c  patch_text.h  policy.c  policy.h  policy_base.h  policy_temp.c  policy_temp.h  root_impl.c  root_impl.h  runtime.c  runtime.h
kernel/uapi/: yukizygisk.h
module/: action.sh  common.sh  customize.sh  module.prop  post-fs-data.sh
scripts/: yzbot.py
tests/: module-kmi.sh
userspace/zygisk/core/: CMakeLists.txt
userspace/zygisk/core/src/: core.cpp  yukilinker.cpp  yukilinker.hpp  yukilinker_tlsdesc.S
userspace/zygisk/daemon/: zygiskd.cpp  zygiskd.hpp
webui/: LICENSE  api.js  config.json  i18n.js  index.html  index.js  styles.css  theme.css
webui/assets/: kernelsu.js
